@@ -945,6 +945,7 @@ drop(M, Obj:object) :->
 
 variable(severity, {status,warning,error} := status, both, "Message severity").
 variable(message,  string*,	     both, "Message displayed").
+variable(popup,    popup*,	     both, "Associated popup menu").
 variable(context,  any*,	     both, "Popup context argument").
 
 identify(F) :->
